--- a/index.html
+++ b/index.html
@@ -131,9 +131,28 @@
         let completedTasks = {};
         const remainingDays = Array.from({length: 15}, (_, i) => i + 17);
 
+        // Load saved progress from localStorage
+        function loadProgress() {
+            const saved = localStorage.getItem('ewptx-tracker-progress');
+            if (saved) {
+                try {
+                    completedTasks = JSON.parse(saved);
+                } catch (e) {
+                    console.log('Error loading saved progress, starting fresh');
+                    completedTasks = {};
+                }
+            }
+        }
+
+        // Save progress to localStorage
+        function saveProgress() {
+            localStorage.setItem('ewptx-tracker-progress', JSON.stringify(completedTasks));
+        }
+
         function toggleTask(day, taskId) {
             const key = `${day}-${taskId}`;
             completedTasks[key] = !completedTasks[key];
+            saveProgress(); // Save after each change
             updateUI();
         }
 
@@ -174,14 +193,16 @@
                     const isCompleted = completedTasks[`${day}-${task.id}`];
                     const taskElement = document.getElementById(`task-${day}-${task.id}`);
                     const textElement = document.getElementById(`text-${day}-${task.id}`);
+                    const checkbox = taskElement?.querySelector('input[type="checkbox"]');
                     
-                    if (taskElement && textElement) {
+                    if (taskElement && textElement && checkbox) {
                         taskElement.className = `task-item flex items-center p-2 rounded cursor-pointer ${
                             isCompleted ? 'bg-green-50' : 'hover:bg-gray-50'
                         }`;
                         textElement.className = `text-sm ml-2 ${
                             isCompleted ? 'text-green-700 completed' : 'text-gray-700'
                         }`;
+                        checkbox.checked = isCompleted;
                     }
                 });
             });
@@ -205,9 +226,8 @@
                             <div 
                                 id="task-${day}-${task.id}"
                                 class="task-item flex items-center p-2 rounded cursor-pointer hover:bg-gray-50"
-                                onclick="toggleTask(${day}, '${task.id}')"
                             >
-                                <input type="checkbox" class="mr-2" ${completedTasks[`${day}-${task.id}`] ? 'checked' : ''}>
+                                <input type="checkbox" class="mr-2" onclick="event.stopPropagation()" onchange="toggleTask(${day}, '${task.id}')">
                                 <span class="text-base mr-2">${task.icon}</span>
                                 <span id="text-${day}-${task.id}" class="text-sm text-gray-700">${task.task}</span>
                             </div>
@@ -219,6 +239,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', () => {
+            loadProgress(); // Load saved data first
             generateCards();
             updateUI();
         });
