--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         ];
 
         // API Configuration
-        const API_BASE_URL = 'https://your-railway-app.railway.app/api'; // Replace with your Railway URL
+        const API_BASE_URL = 'https://my-todo-list-production-ac74.up.railway.app/api'; // Replace with your Railway URL
         
         let completedTasks = {};
         const remainingDays = Array.from({length: 15}, (_, i) => i + 17);
